# holidays

./: .coderabbit.yaml  .coverage 2  .coverage.LAPTOP-68GCUKMH.43449.XaNWSPqx.wgw0  .coverage.ankush-kapoor-VirtualBox.7129.XRQHPmZx.wgw1  .coverage.codespaces-ec6448.pid106082.XV1VWoOx.HO5s3cAzQ9fh  .cursorrules  .flake8  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .properdocs.yml  .readthedocs.yaml  .travis.yml  .zenodo.json  AUTHORS  AUTHORS.md  CHANGES  CHANGES.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.html  README.md  README.rst  RELEASE.md  RELEASE.rst  SECURITY.md  SPONSORSHIP.md  VERSION  __init__.py  codemeta.json  compile.py  (+33 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: Deploy_gh_Page.yml  check-country-holiday-updates.yml  check-financial-holiday-updates.yml  check-holiday-updates.yml  ci-cd.yml  codeql-analysis.yml  deploy-gh-pages.yml  pre-commit-autoupdate.yml  prl-labeler.yml  update-authors.yml  update-snapshots.yml
cspell/: Dockerfile  Makefile  cspell.json  custom-dict.txt  make.cmd  package-lock.json  package.json
custom-dicts/: en_GB.aff  en_GB.dic  hi_IN.aff  ia.aff  ia.dic  vec.aff
docs/: SUMMARY.md  api.md  changelog.md  downloads.md  examples.md  file_header.txt  holiday_categories.md  india_festivals.md  indian_festivals.md  make_html.bat  mixins.md  modules.md  requirements.txt  vacanza.py
docs/css/: custom.css  downloads.css
docs/examples/: vacanza.py
docs/js/: copyright.js  custom.js  downloads.js
docs/source/: api.rst  changelog.rst  conf.py  examples.rst  index.rst  mixins.rst  modules.rst
example/: export_holiday_csv.py  vacanza.py
examples/: vacanza.py
holidays/: RELEASE.rst  __init__.py  calendars.py  categories.py  constants.py  deprecation.py  exceptions.py  fuzzy_search.py  generate_ics.py  helpers.py  holiday_base.py  holiday_groups.py  ical.py  long_weekends_finder.py  mixins.py  no_holiday_base.py  observed_holiday_base.py  pandas.py  registry.py  spell_check.py  spell_check_holidays.py  tempCodeRunnerFile.py  tests.py  types.py  utils.py  version.py
holidays/calendars/: __init__.py  asian.py  balinese_saka.py  buddhist.py  burmese.py  chinese.py  custom.py  ethiopian.py  germany_school.py  germany_school_dates.py  gregorian.py  hebrew.py  hindu.py  islamic.py  julian.py  julian_revised.py  mandaean.py  mongolian.py  oriental.py  persian.py  revised_julian.py  sinhala.py  sinhala_astronomy.py  thai.py  tibetan.py
holidays/countries/: Ethiopia.py  Namibia.py  Uruguay.py  __init__.py  afghanistan.py  aland_islands.py  albania.py  algeria.py  american_samoa.py  andorra.py  angola.py  anguilla.py  antarctica.py  antigua_and_barbuda.py  argentina.py  armenia.py  aruba.py  australia.py  austria.py  azerbaijan.py  bahamas.py  bahrain.py  bangladesh.py  barbados.py  belarus.py  belgium.py  belize.py  benin.py  bermuda.py  bhutan.py  bolivia.py  bonaire_sint_eustatius_and_saba.py  bosnia_and_herzegovina.py  botswana.py  bouvet_island.py  brazil.py  british_indian_ocean_territory.py  british_virgin_islands.py  brunei.py  bulgaria.py  (+225 more)
holidays/deprecations/: v1_incompatibility.py
holidays/examples/: vacanza.py
holidays/financial/: __init__.py  _sifma.py  bolsa_mexicana_de_valores.py  bolsas_y_mercados_argentinos.py  bolsas_y_mercados_espanoles.py  bombay_stock_exchange.py  brasil_bolsa_balcao.py  chicago_mercantile_exchange.py  european_central_bank.py  germany_exchange.py  hong_kong_stock_exchange.py  ice_futures_europe.py  india_national_stock_exchange.py  japan_exchange.py  johannesburg_stock_exchange.py  london_stock_exchange.py  nasdaq.py  national_stock_exchange_of_india.py  ny_stock_exchange.py  shanghai_stock_exchange.py  shenzhen_stock_exchange.py  sifma.py  six_swiss_exchange.py  toronto_stock_exchange.py  us_government_securities.py  us_new_york.py
holidays/groups/: __init__.py  balinese_saka.py  buddhist.py  burmese.py  chinese.py  christian.py  custom.py  eastern.py  hebrew.py  hindu.py  international.py  islamic.py  mandaean.py  mongolian.py  observed.py  persian.py  sinhala.py  thai.py  tibetan.py
holidays/mixins/: __init__.py  child_entity.py
requirements/: build.txt  dev.txt  docs.txt  runtime.txt  tests.txt
scripts/: __init__.py  archive_links.py  build_date.py  compile_mo.py  gen_changelog.py  gen_ref_pages.py  generate_ics.py  generate_release_notes.py  generate_site_assets.py  generate_snapshots.py  language_registry.py  normalize_text.py  summary.py  update_authors.py
scripts/calendar/: asian_generator.py  generator.py  germany_school_generator.py  germany_school_holidays_generator.py  hebrew_generator.py  hindu_generator.py  islamic_gen.py  islamic_generator.py  mabims_generator.py  mabims_islamic_generator.py  mandaean_generator.py  mongolian_generator.py  tibetan_generator.py
scripts/docs/: gen_changelog.py  gen_copyright.py  gen_index.py  gen_ref_pages.py  gen_summary.py
scripts/i18n/: generate_po_templates.py
scripts/l10n/: generate_locale_po_files.py  generate_mo_files.py  generate_po_files.py  generate_pot_files.py  holidays_intermediate_sample.json  holidays_l10n.json  json_builder.py  l10n_helper.py
test/: __init__.py  common.py  test_docs.py  test_holiday_base.py  test_holiday_groups.py  test_imports.py  test_utils.py
tests/: __init__.py  common.py  my_test_script.py  test_calendars.py  test_category_methods.py  test_docs.py  test_flake8.py  test_generate_ics.py  test_germany_school_holidays_generator.py  test_helpers.py  test_holiday_base.py  test_holiday_groups.py  test_ical.py  test_imports.py  test_l10n.py  test_long_weekends.py  test_observed_holiday_base.py  test_package.py  test_range_query.py  test_range_query_filter.py  test_registry.py  test_utils.py
tools/: sort_cspell_dict.py
translations/: canada.en.yml  canada.fr.yml
utils/: __init__.py  long_weekends.py
(+3096 files in other folders)
