[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61", "wheel" ]

[project]
name = "holidays"
description = "Open World Holidays Framework"
readme = "README.md"
keywords = [ "calendar", "holidays", "l10n", "vacation", "worldwide" ]
license = "MIT"
license-files = [ "CONTRIBUTORS", "LICENSE" ]
maintainers = [
  { name = "Arkadii Yakovets" },
  { name = "Panpakorn Siripanich" },
  { name = "Serhii Murza" },
]

authors = [ { name = "Vacanza Team" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: File Formats :: JSON",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [ "version" ]

dependencies = [ "python-dateutil>=2.9.0.post0,<3" ]

urls.Changelog = "https://github.com/vacanza/holidays/releases/"
urls.Documentation = "https://holidays.readthedocs.io/en/latest/"
urls.Repository = "https://github.com/vacanza/holidays/"

[dependency-groups]
dev = [
  "gitpython>=3.1.45,<4",
  "hijridate>=2.5,<3",
  "lingva>=5.0.6,<6",
  "pre-commit>=4.5,<5",
  "pygithub>=2.8.1,<3",
  "requests>=2.32.5,<3",
]

docs = [
  "markdown-include>=0.8.1,<1",
  "mkdocs>=1.6.1,<2",
  "mkdocs-gen-files>=0.6,<1",
  "mkdocs-literate-nav>=0.6.2,<1",
  "mkdocstrings-python>=2.0.1,<3",
]

build = [
  "polib>=1.2,<2",
]

tests = [
  "coverage>=7.12,<8",
  "numpy>=2,<2.3; python_version<'3.11'",
  "numpy>=2.3.5,<3; python_version>='3.11'",
  "polib>=1.2,<2",
  "pytest>=9.0.1,<10",
  "pytest-cov>=7,<8",
  "pytest-xdist>=3.8,<4",
]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
include = [ "holidays*" ]

[tool.ruff]
target-version = "py310"

line-length = 99
lint.select = [ "E4", "E5", "E7", "E9", "F", "FBT", "N", "PLE", "S", "T", "TC", "UP", "W" ]
lint.per-file-ignores."holidays/__init__.py" = [ "F403" ]
lint.per-file-ignores."holidays/calendars/__init__.py" = [ "F401" ]
lint.per-file-ignores."holidays/constants.py" = [ "F401" ]
lint.per-file-ignores."holidays/countries/__init__.py" = [ "F401" ]
lint.per-file-ignores."holidays/financial/__init__.py" = [ "F401" ]
lint.per-file-ignores."holidays/groups/__init__.py" = [ "F401" ]
lint.per-file-ignores."holidays/holiday_base.py" = [ "FBT" ]
lint.per-file-ignores."holidays/ical.py" = [ "FBT" ]
lint.per-file-ignores."holidays/mixins/__init__.py" = [ "F401" ]
lint.per-file-ignores."holidays/registry.py" = [ "FBT" ]
lint.per-file-ignores."holidays/utils.py" = [ "FBT" ]
lint.per-file-ignores."scripts/archive_links.py" = [ "T201" ]
lint.per-file-ignores."scripts/generate_release_notes.py" = [ "T201" ]
lint.per-file-ignores."scripts/generate_snapshots.py" = [ "T201" ]
lint.per-file-ignores."scripts/l10n/generate_mo_files.py" = [ "T201" ]
lint.per-file-ignores."scripts/l10n/generate_po_files.py" = [ "T201" ]
lint.per-file-ignores."scripts/l10n/l10n_helper.py" = [ "T201" ]
lint.per-file-ignores."tests/common.py" = [ "N802" ]
lint.per-file-ignores."tests/test_holiday_base.py" = [ "S301" ]
lint.flake8-errmsg.max-string-length = 99
lint.pyupgrade.keep-runtime-typing = true

[tool.isort]
known_first_party = [ "holidays", "tests" ]
line_length = 99
multi_line_output = 3
no_inline_sort = true
profile = "black"
skip = [ "docs" ]

[tool.pytest.ini_options]
addopts = [
  "--cov-fail-under=100",
]
filterwarnings = [
  "ignore::DeprecationWarning:holidays.deprecations.v1_incompatibility",
]
testpaths = [ "tests" ]

[tool.coverage.report]
exclude_lines = [
  "^if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
omit = [ "scripts/*", "tests/*" ]

[[tool.mypy.overrides]]
module = "holidays.countries.*"
disable_error_code = [ "override" ]

[[tool.mypy.overrides]]
module = "holidays.financial.*"
disable_error_code = [ "override" ]

[[tool.mypy.overrides]]
module = "holidays.groups.*"
disable_error_code = [ "attr-defined" ]
