[metadata]
name = holidays
version = attr: holidays.__version__
description = Generate and work with holidays in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/dr-prodigy/python-holidays
author = Maurizio Montel (dr-prodigy)
author_email = dr.prodigy.github@gmail.com
maintainer = Arkadii Yakovets (arkid15r)
maintainer_email = ark@cho.red
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Office/Business :: Scheduling
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Localization

[options]
packages =
    holidays
    holidays/countries
    holidays/financial
install_requires =
    PyMeeus
    convertdate>=2.3.0
    hijri-converter
    korean-lunar-calendar
    python-dateutil
python_requires = >=3.7

[options.package_data]
holidays = py.typed

[bumpversion]
current_version = 0.20

[flake8]
per-file-ignores =
    holidays/__init__.py:F401,F403
    holidays/countries/__init__.py:F401
    holidays/financial/__init__.py:F401
    test/test_holiday_base.py:E203
    test/test_imports.py:F401

[rstcheck]
ignore_language = python
ignore_directives = automodule
