[metadata]
name = holidays
version = attr: holidays.__version__
description = Generate and work with holidays in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/dr-prodigy/python-holidays
author = Maurizio Montel (dr-prodigy)
author_email = dr.prodigy.github@gmail.com
maintainer = Arkadii Yakovets (arkid15r)
maintainer_email = ark@cho.red
license = MIT
license_files =
    LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Office/Business :: Scheduling
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Localization

[options]
packages =
    holidays
    holidays/countries
    holidays/financial
install_requires =
    python-dateutil
python_requires = >=3.7
include_package_data = True

[bumpversion]
current_version = 0.25

[flake8]
extend-ignore = F821
per-file-ignores =
    __init__.py:F401,F403
    holidays/__init__.py:F401,F403
    holidays/countries/__init__.py:F401
    holidays/financial/__init__.py:F401
    scripts/generate_release_notes.py:T201
    tests/test_utils.py:T201
    tests/test_holiday_base.py:E203
    tests/test_imports.py:F401

[mypy]
strict = False

[mypy-holidays.countries.*]
disable_error_code = override

[mypy-holidays.holiday_groups]
disable_error_code = attr-defined

[rstcheck]
ignore_directives = automodule
ignore_language = python
